# Demand-to-MVP-Radar

./: .gitignore  MEMORY.md  PLAYBOOK.md  README.md  pyproject.toml
.claude/: settings.json
config/: live_sources.env.example  mvp_weekly_sources.json  operator_fit_profile.md
demand_mvp_radar/: __init__.py  briefs.py  cli.py  clustering.py  config.py  credentials.py  decisions.py  dossiers.py  experiments.py  health.py  lead_sla.py  models.py  mvp_weekly.py  observability.py  pipeline.py  proof.py  review_cockpit.py  scoring.py  source_trust.py  telegram_digest.py  validation_evidence.py  validation_queries.py
deploy/: demand-mvp-radar.service  demand-mvp-radar.timer
docs/: AI_DEVELOPMENT_PACK.md  ARCHITECTURE.md  BACKUP_RECOVERY.md  CODEX_PROMPT.md  COGNITION_MANIFEST.md  DECISION_LOG.md  DEMAND_SOURCE_MAP.md  EVIDENCE_INDEX.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  IMPLEMENTATION_REFERENCE_MAP.md  LIVE_SOURCE_PRODUCTION_ROADMAP.md  MVP_WEEKLY_LIVE_SOURCES.md  OPERATOR_RUNBOOK.md  OPERATOR_WORKFLOW.md  PERSONAL_TO_PRODUCTION_PLAN.md  PRIVATE_BETA_ONBOARDING.md  PROJECT_PLAN.md  RADAR_VALIDATION_EVIDENCE.md  SOLO_EVIDENCE_LEDGER.md  SOURCE_CATALOG.md  VPS_COGNITION_VAULT.md  entropy_core_gensyn_integration.md  open_source_research_protocol.md  pathway_live_intelligence_context.md  report_eval.md  retrieval_eval.md  spec.md  tasks.md  tool_eval.md
hooks/: enforce_codex_exec.sh  guard_files.sh  log_bash.sh  save_checkpoint.sh
prompts/: ORCHESTRATOR.md  PHASE1_VALIDATOR.md  STRATEGIST.md
scripts/: eval_retrieval.py  eval_tools.py
(+207 files in other folders)
